InsuranceOrg/force-app/main/default/objects/vlocity_ins__DrugSubstitute__c/vlocity_ins__DrugSubstitute__c.object-meta.xml
<CustomObject>
    <description>Drug Substitute is a therapeutically equivalent of a medicine. Drug Substitute is used as an alternate or substituted medicine for a brand name prescription medicine. Master-detail child object of Drug.</description>
    <label>Drug Substitute</label>
    <nameField>
        <label>Drug Substitute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drug Substitutes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>