InsuranceOrg/force-app/main/default/objects/vlocity_ins__DrugSubstitute__c/fields/vlocity_ins__DrugId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DrugId__c</fullName>
    <description>The primary drug from the Drug object that is referenced for substitution.</description>
    <inlineHelpText>The primary drug from the Drug object that is referenced for substitution.</inlineHelpText>
    <label>Drug</label>
    <referenceTo>vlocity_ins__Drug__c</referenceTo>
    <relationshipLabel>Drug Substitutes</relationshipLabel>
    <relationshipName>DrugSubstitutes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>