InsuranceOrg/force-app/main/default/objects/vlocity_ins__DrugSubstitute__c/fields/vlocity_ins__SubstituteDrugName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SubstituteDrugName__c</fullName>
    <formula>IF(vlocity_ins__SubstituteDrugId__r.vlocity_ins__TradeName__c!=&quot;&quot;, vlocity_ins__SubstituteDrugId__r.vlocity_ins__TradeName__c, vlocity_ins__SubstituteDrugId__r.vlocity_ins__GenericName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Substitute Drug Name</label>
    <type>Text</type>
</CustomField>