InsuranceOrg/force-app/main/default/objects/vlocity_ins__DrugSubstitute__c/fields/vlocity_ins__SubstitutionOrder__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SubstitutionOrder__c</fullName>
    <label>Substitution Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>